# python-projects

./: README.md  main.py  pyproject.toml
chrome-browser/: main.py
haxxor-terminal/: README.md  main.py  pyproject.toml
idle-breakout-import-gen/: README.md  main.py  pyproject.toml  requirements.txt
password-gen/: README.md  main.py
